[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/UI/RetryButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://start-assets/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/UI/UserInterface.gd" type="Script" id=6]
[ext_resource path="res://src/AutoLoad/MobileControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://start-assets/settings.png" type="Texture" id=8]
[ext_resource path="res://src/UI/Sound.gd" type="Script" id=9]
[ext_resource path="res://src/UI/TouchScreen.gd" type="Script" id=10]
[ext_resource path="res://src/UI/Message.tscn" type="PackedScene" id=11]
[ext_resource path="res://start-assets/Fonts/font_message.tres" type="DynamicFont" id=12]
[ext_resource path="res://start-assets/health_progress.png" type="Texture" id=13]
[ext_resource path="res://start-assets/health_base.png" type="Texture" id=14]
[ext_resource path="res://start-assets/Fonts/font_small.tres" type="DynamicFont" id=15]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="MessageLabel" parent="." instance=ExtResource( 11 )]

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_right = -2.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 12 )
text = "Score: %s"
align = 2

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0, 0.254902, 0.235294 )

[node name="MobileControl" parent="PauseOverlay" instance=ExtResource( 7 )]

[node name="Left" parent="PauseOverlay/MobileControl" index="0"]
visible = false

[node name="Right" parent="PauseOverlay/MobileControl" index="1"]
visible = false

[node name="Jump" parent="PauseOverlay/MobileControl" index="2"]
visible = false

[node name="Menu" parent="PauseOverlay/MobileControl" index="3"]
position = Vector2( 32, 40 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
margin_top = -326.0
margin_bottom = -157.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -157.0
margin_right = 189.0
margin_bottom = 157.0

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_right = 378.0
margin_bottom = 102.0

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 2 )]
margin_top = 106.0
margin_right = 378.0
margin_bottom = 208.0
text = "Main Menu"
next_scene_path = "res://src/Screens/MainMenu.tscn"

[node name="ExitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 212.0
margin_right = 378.0
margin_bottom = 314.0

[node name="Settings" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -663.0
margin_top = -373.0
margin_right = 663.0
margin_bottom = 373.0
color = Color( 0.227451, 0, 0.254902, 0.490196 )

[node name="SettingsTitle" parent="Settings" instance=ExtResource( 3 )]
margin_left = -663.0
margin_top = -326.0
margin_right = 663.0
margin_bottom = -157.0
text = "Settings"

[node name="SettingsButtons" type="HBoxContainer" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 60.0

[node name="TouchScreen" type="TextureButton" parent="Settings/SettingsButtons"]
margin_right = 58.0
margin_bottom = 120.0
focus_mode = 0
size_flags_horizontal = 3
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Sound" type="TextureButton" parent="Settings/SettingsButtons"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 120.0
focus_mode = 0
size_flags_horizontal = 3
expand = true
stretch_mode = 5
script = ExtResource( 9 )

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 8.0
margin_right = 1.0
margin_bottom = 48.0
focus_mode = 0
icon = ExtResource( 8 )
flat = true
clip_text = true
expand_icon = true

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 10.0
value = 10.0
rounded = true
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 13 )
tint_over = Color( 0.984314, 0, 0, 1 )
tint_progress = Color( 0.129412, 0.784314, 0.0352941, 1 )
nine_patch_stretch = true

[node name="Health" type="Label" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 15 )
text = "health"
align = 1

[connection signal="pressed" from="Settings/SettingsButtons/TouchScreen" to="Settings/SettingsButtons/TouchScreen" method="_on_pressed"]
[connection signal="pressed" from="Settings/SettingsButtons/Sound" to="Settings/SettingsButtons/Sound" method="_on_pressed"]
[connection signal="button_up" from="SettingsButton" to="." method="_on_Settings_button_up"]

[editable path="PauseOverlay/MobileControl"]
